# padel-shop

./: README.md  manage.py  pyproject.toml
padelshop/: asgi.py  settings.py  urls.py  wsgi.py
padelshop/static/styles/: index.css
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_itemmeasures_price_alter_item_brand.py  0002_order_orderitem.py  0003_reviewitem.py  0004_alter_reviewitem_rating_stars.py  0005_alter_reviewitem_item.py
products/templates/: index.html  item.html  order.html  product.html  products.html  racket.html  rackets.html  shoe.html  shoes.html  wishlist.html
theme/: package-lock.json  package.json  tailwind.config.js
theme/static/css/: output.css
theme/templates/layouts/: base.html  product.html
users/: urls.py  views.py
users/templates/: authentication.html  login.html  register.html
